# js-vs-wasm-benchmarks

./: .gitignore  Makefile  README.md  benchmarks.js  index.html  main.js
rust-src/: Cargo.toml
rust-src/src/: lib.rs
