[package]
name = "rust-wasm-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# wasm-opt post-processing disabled — rustc release profile already applies
# full optimisation (opt-level=3, lto), so the extra pass is redundant.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
